# renderer

./: Cargo.toml
src/: camera.rs  compute.rs  compute.wgsl  lib.rs  main.rs  object.rs  shader.wgsl  stencil.wgsl  texture.rs
src/animations/: anim.rs  builder.rs  easing.rs  mod.rs
src/core/: bezier.rs  camera.rs  mod.rs  renderer.rs  shape.rs  window.rs
src/core/utils/: context.rs  latch.rs  mod.rs  pipeline.rs
src/geometry/: bezier.rs  mod.rs  shapes.rs
src/renderer/: bindgroup.rs  camera.rs  context.rs  mod.rs  pipeline.rs  window.rs
src/renderer/utils/: bindgroup.rs  mod.rs
