[package]
name = "webg"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
wgpu = "22.1.0"
log = "0.4.22"
env_logger = "0.11.5"
bytemuck = { version = "1.19.0", features = ["derive"] }
cgmath = "0.18.0"
image = { version = "0.25.4", default-features = false, features = ["png", "jpeg", "rayon"] }
delaunator = "1.0.2"
encase = { version = "0.10.0", features = ["cgmath"] }
tokio = { version = "1.42.0", features = ["macros", "rt", "time"] }
